Add average and sum endpoints
